# estacker_app_soc_nrf52

./: .gitignore  CMakeLists.txt  eh_iot_eval_2.overlay  prj.conf
boards/arm/eh_iot_eval_2/: Kconfig.board  Kconfig.defconfig  eh_iot_eval_2.dts  eh_iot_eval_2.yaml  eh_iot_eval_2_defconfig
inc/: VL53L1X_api.h  ai.h  bluetooth.h  dps368.h  gpios.h  main.h  opt4060.h  sensors.h  tof.h  uart.h  vl53l1_platform.h  vl53l1_types.h
src/: VL53L1X_api.c  ai.c  bluetooth.c  bme68x_common.c  dps368.c  gpios.c  main.c  opt4060.c  sensors.c  tof.c  uart.c  vl53l1_platform.c
